--- a/templates/lab8/lab8.html
+++ b/templates/lab8/lab8.html
@@ -14,8 +14,7 @@
             <div class="lab8-buttons">
                 <a href="/lab8/articles" class="lab8-btn">Мои статьи</a>
                 <a href="/lab8/create" class="lab8-btn">Создать статью</a>
-                {% if login %}
-                    <a href="/lab8/profile" class="lab8-btn">Профиль</a>
+                {% if current_user.is_authenticated %}
                     <a href="/lab8/logout" class="lab8-btn">Выйти</a>
                 {% else %}
                     <a href="/lab8/login" class="lab8-btn">Войти</a>
@@ -23,8 +22,8 @@
                 {% endif %}
             </div>
             <div class="lab8-user">
-                {% if login %}
-                    {{ login }}
+                {% if current_user.is_authenticated %}
+                    {{ current_user.login }}
                 {% else %}
                     Anonymous
                 {% endif %}
