--- a/templates/lab8/articles.html
+++ b/templates/lab8/articles.html
@@ -15,7 +15,7 @@
                 {% for article in articles %}
                 <div class="lab8-article">
                     <h3>{{ article.title }}</h3>
-                    <p>{{ article.article_text[:200] }}{% if article.article_text|length > 200 %}...{% endif %}</p>
+                    <p>{{ article.article_text}}</p>
                     <div class="lab8-article-meta">
                         <span>Публичная: {{ 'Да' if article.is_public else 'Нет' }}</span>
                         <span>Избранная: {{ 'Да' if article.is_favorite else 'Нет' }}</span>
